Fix bold in dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -185,6 +185,10 @@ a {
     color: $nord0 !important;
   }
 
+  strong {
+    color: $nord6;
+  }
+
   .navbar,
   .footer,
   .box {
